<resources>
    <string name="app_name">baidu_gpsmap_demo</string>
    <string name="demo">百度地图定位Demo</string>
    <string name="location">定位</string>
    <string name="plan">规划</string>
    <string name="showLoc">显示位置信息</string>
    <string name="attribute">属性</string>
    <string name="command">命令</string>
    <string name="locationTime">定位时间：</string>
    <string name="communicateTime">通信时间：</string>
    <string name="status">状态：</string>
    <string name="battery">电量：</string>
    <string name="locationModes">定位方式：</string>
    <string name="direction">方向：</string>
    <string name="speed">速度：</string>
    <string name="address">地址：</string>
    <string name="picture">相册</string>
    <string name="photoes">拍照</string>
    <string name="cancel">取消</string>
</resources>
